# storehub_sf_agent

./: .env_template  .gitignore  .pre-commit-config.yaml  AI Vision, Growth, Progression Proposal_ Operation Excellence Team.md  BI - AI First Vision 3.0.md  COMPREHENSIVE_EXTRACTION.md  DEV_GUIDE.md  FIELD_ANALYSIS_GUIDE.md  HOD_DEMO_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  PYTHON3_MODERNIZATION_COMPLETE.md  PYTHON3_UPGRADE_GUIDE.md  QUERY_ANALYTICS.md  README.md  REPOSITORY_GUIDE.md  SESSION_SUMMARY.md  SUPABASE_MIGRATION_GUIDE.md  Salesforce AI Colleague.md  Salesforce Flow RAG Ingestion POC.md  ai_colleague_ingest.py  analyze_query_stats.py  app.py  app_minimal.py  app_native_chat.py  app_streamlined.py  demo.py  demo_comprehensive_extraction.py  demo_enhanced_flow_library.py  field_analysis_demo.py  ingest_all_flows.py  ingest_lead_flows.py  migrate_to_supabase.py  package-lock.json  package.json  pyproject.toml  query_cache.json  query_statistics.jsonl  requirements.txt  server.py  (+10 more)
.cursor/rules/: salesforce.mdc
archive/: process_standard_objects.py  setup_llm_providers.py  test_phase2.py  unified_metadata_app_mockup.js
archive/old_documentation/: COMPLETE_METADATA_DISCOVERY.md  COMPLETE_ORG_ANALYSIS.md  DEPENDENCY_MAPPING_SUCCESS_REPORT.md  HONEST_DEPENDENCY_ASSESSMENT.md  PHASE2_DEMO_RESULTS.md  PHASE2_ENHANCEMENT_GUIDE.md  PHASE2_REAL_FLOW_ANALYSIS.md  PHASE2_VERIFICATION_GUIDE.md  PHASE3_ROADMAP.md
backups/: app_minimal.py  app_original_backup.py  app_streamlined.py
data/: salesforce_metadata.db
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: FlowsTable.tsx  Header.tsx
frontend/src/app/flows/: page.tsx
frontend/src/app/platform/: page.tsx  platforms.ts
frontend/src/app/platform/[platformName]/: page.tsx
frontend/src/app/platform/[platformName]/[metadataType]/: page.tsx
frontend/src/app/platform/[platformName]/[metadataType]/[objectName]/: page.tsx
interactive-project-map/: package-lock.json
interactive-project-map/interactive-project-map/: package.json
interactive-project-map/interactive-project-map/src/app/: page.tsx
interactive-project-map/interactive-project-map/src/components/: ProjectMap.tsx
interactive-project-map/interactive-project-map/src/components/nodes/: VisionNode.tsx
interactive-project-map/src/components/: ProjectMap.tsx
interactive-project-map/src/components/nodes/: ProjectNode.tsx  TechStackNode.tsx
rag_poc/: __init__.py  config.py
rag_poc/analysis/: __init__.py  dependency_mapper.py  impact_analyzer.py
rag_poc/cli/: __init__.py  comprehensive_ingest.py  main_cli.py
rag_poc/embeddings/: __init__.py  gemini_embeddings.py
rag_poc/generation/: __init__.py  gemini_generator.py
rag_poc/processing/: __init__.py  text_processor.py
rag_poc/salesforce/: __init__.py  client.py  comprehensive_cli_extractor.py  flow_fetcher.py  metadata_fetcher.py
rag_poc/storage/: __init__.py  chroma_store.py
salesforce_metadata/flows/: Account_Assign_BC_as_Owner.flow-meta.xml  Lead_Inbound_2_0.flow-meta.xml
src/: config.py  main.py
src/app/: main.py  page.tsx
src/app/api/: fastapi_server.py  fastapi_server_sqlite.py
src/app/data/: salesforce_metadata.db
src/app/db/: database_service.py  demo_metadata.db  supabase_service.py
src/app/extractor/: metadata_extractor.py
src/app/services/: analysis_service.py  enhanced_analysis_service.py  salesforce_standard_fields_service.py
src/components/: ProjectMap.tsx
src/components/nodes/: ProjectNode.tsx  TechStackNode.tsx  VisionNode.tsx
src/core/: models.py
src/processing/: metadata_processor.py
src/salesforce/: client.py
src/services/: __init__.py  graph_service.py  llm_service.py  salesforce_docs_extractor.py
